# o324

./: .gitignore  .versio.yaml  Cargo.toml  Justfile  README.md  bacon.toml  deny.toml  license.txt  package-lock.json  roadmap.md  shell.nix  versio-projects.json
libs/cli/: CHANGELOG.html  Cargo.toml  dbus.rs  main.rs
libs/cli/commands/: activity.rs  cancel.rs  db.rs  delete.rs  edit.rs  init.rs  log.rs  mod.rs  playground.rs  restart.rs  resume.rs  start.rs  stats.rs  status.rs  stop.rs  sync.rs
libs/cli/utils/: command_error.rs  display.rs  displayable_id.rs  exit_code.rs  id.rs  log.rs  mod.rs  task_ref.rs  term.rs  time.rs
libs/core/: CHANGELOG.html  Cargo.toml  config.rs  lib.rs  load.rs  utils.rs
libs/daemon/: Cargo.toml  app.rs  lib.rs  main.rs  window_events.rs
libs/daemon/commands/: status.rs  version.rs
libs/daemon/commands/start/: mod.rs
libs/daemon/config/: config.rs  defs.rs  load_config.rs  mod.rs  storage.rs
libs/daemon/core/: batch_loader.rs  cache_strategy.rs  color.rs  mod.rs  named_model.rs  repository.rs  storage.rs  tracing.rs  utils.rs
libs/daemon/core/supervisor/: inter_process_storage.rs  mod.rs
libs/daemon/core/task_prefix/: cache.rs  index.rs  mod.rs
libs/daemon/dbus/: mod.rs  mod.rs.~1~  transforms.rs
libs/daemon/entities/: activity.rs  mod.rs  prefix_trie_node.rs  project_color.rs  task.rs
libs/daemon/repositories/: mod.rs
libs/daemon/repositories/activity/: defs.rs  mod.rs
libs/daemon/repositories/project_color/: mod.rs
libs/daemon/repositories/task/: defs.rs  mod.rs
libs/daemon/repositories/task_prefix/: mod.rs
libs/daemon/services/: mod.rs  window_events.rs
libs/daemon/services/activity/: mod.rs
libs/daemon/services/dbus/: interface.rs  mod.rs  transforms.rs
libs/daemon/services/storage_bridge/: mod.rs
libs/daemon/services/task/: error.rs  mod.rs
libs/daemon/services/task_manager/: mod.rs
libs/daemon/services/task_prefix_repository/: mod.rs
libs/daemon/services/task_repository/: mod.rs
libs/daemon/services/window_events/: mod.rs
libs/daemon/storage/: mod.rs  models.rs  storage.rs  task.rs
libs/daemon/storage/entities/: prefix_trie_node.rs  task.rs
libs/dbus/: Cargo.toml  dto.rs  lib.rs  proxy.rs
libs/dbus/macros/: Cargo.toml  lib.rs
libs/git-document-db/: Cargo.toml  client.rs  client_config.rs  connection.rs  connection_config.rs  document_parser.rs  errors.rs  lib.rs  lock_manager.rs  query_runner.rs  shared_query_runner.rs  sync_runner.rs  transaction.rs
libs/git-document-db/git_actions/: fetch.rs  init.rs  push.rs  reset_to_head.rs  stage_and_commit_changes.rs
libs/git-document-db/git_actions/rebase/: mod.rs  rebase_iterator_struct.rs  rebase_operation_struct.rs
libs/git-document-db/macros/: Cargo.toml  lib.rs
libs/git-document-db/utils/: advisory_lock.rs  files.rs  system_lock.rs  test_utilities.rs  thread_lock.rs
libs/gui/: .eslintrc.cjs  .gitignore  CHANGELOG.html  Cargo.toml  README.md  package-lock.json  package.json  shell.nix  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
libs/gui-bak/: .gitignore  Cargo.toml  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
libs/gui-bak/src-frontend/: global.css  root.tsx
libs/gui-bak/src-frontend/routes/: index.tsx
libs/gui-bak/src-interface/: lib.rs
libs/gui/adapters/static/: vite.config.ts
libs/gui/src/: app.tsx  entry.preview.tsx  entry.ssr.tsx  global.css  root.tsx
libs/gui/src-frontend/: global.css
libs/gui/src-frontend/routes/: index.tsx  layout.tsx
libs/gui/src-frontend/utils/: date.ts
libs/gui/src-tauri/: Cargo.toml  tauri.conf.json
libs/gui/src-tauri/capabilities/: main.json
libs/gui/src-tauri/src/: commands.rs  dbus_plugin.rs  event_emitter.rs  lib.rs  main.rs  tracing.rs  tray.rs  utils.rs  window_emitter.rs
libs/gui/src/api/: definitions.ts  index.ts  listener.ts  methods.ts
libs/gui/src/composables/: index.ts  use-dark-mode.ts  use-debounce.ts  use-floating.ts  use-media-query.ts  use-outer-click.ts  use-toggle.ts
libs/gui/src/hooks/: use-click-outside.ts  use-focus-trap.tsx  use-form.ts  use-tray-icon-updater.tsx
libs/gui/src/provider/: portal-context.tsx  task-context.tsx
libs/gui/src/routes/: calendar.tsx  dashboard.tsx  debug.tsx  index.tsx  layout.tsx  settings.tsx
libs/gui/src/store/: projects-store.tsx
libs/gui/src/utils/: focus.ts  option.ts  storage.ts  store.ts  xor.ts
libs/storage/: CHANGELOG.html  Cargo.toml  lib.rs
libs/storage-core/: Cargo.toml  lib.rs  storage.rs  storage_config.rs  task.rs  transaction.rs
libs/storage-git/: CHANGELOG.html  Cargo.toml  config.rs  git_synchronize.rs  lib.rs  module.rs  storage.rs  task_action.rs  test_utilities.rs  transaction.rs
libs/storage-git/git_actions/: fetch.rs  init.rs  push.rs  stage_and_commit_changes.rs
libs/storage-git/git_actions/rebase/: diff.rs  mod.rs  rebase_iterator.rs  rebase_operation.rs  rebase_operation_struct.rs  rebase_struct.rs
libs/storage-git/managers/: config_manager.rs  document_storage_manager.rs  file_format_manager.rs  git_manager.rs  git_sync_manager.rs  metadata_document_manager.rs  metadata_manager.rs  model_manager.rs  task_document_manager.rs  task_manager.rs
libs/storage-git/models/: metadata_document.rs  task_document.rs
libs/storage-git/providers/: git_transaction_provider.rs
libs/storage-git/services/: git_service.rs  metadata_service.rs  storage_sync_service.rs  task_service.rs
libs/storage-git/task_actions/: repair_unique_current_task.rs  resolve_task_conflict.rs  task_change.rs
libs/storage-git/utils/: files.rs  semaphore.rs  system_lock.rs  test_utilities.rs  ulid.rs
libs/storage/core/: storage.rs  storage_config.rs  task.rs  transaction.rs
libs/storage/storage/: git.rs  in_memory.rs
libs/storage/utils/: files.rs  semaphore.rs  time.rs
libs/window-tracker/: Cargo.toml  build.rs  lib.rs  utils.rs  x11.rs
libs/window-tracker/backends/: mod.rs  wayland_backend.rs  x11.rs
libs/window-tracker/providers/: ewmh.rs  fht.rs  fht_compositor.rs  gnome.rs  hyprland.rs  kde.rs  mod.rs  niri.rs  sway.rs  wayland.rs  x11.rs
(+147 files in other folders)
