[package]
name = "o324-cli"
version = "0.2.0"
edition = "2021"
publish = false

[[bin]]
name = "o324"
path = "main.rs"

[dependencies]
o324-core = { path = "../core" }
o324-storage = { path = "../storage" }
o324-dbus-interface = { path = "../dbus-interface" }
clap = { version = "4.4.11", features = ["derive"] }
eyre = "0.6.9"
tokio = { version = "1.34", features = ["full"] }
colored = "2.0"
shellexpand = "2.1"
chrono = "0.4.34"
chrono-humanize = "0.2.3"
prettytable-rs = "0.10.0"
serde_json = "1.0"
color-eyre = "0.6.3"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "registry"] }
directories-next = "2.0"
dbus = "0.9.7"
