[package]
name = "o324-cli"
version = "0.2.0"
edition = "2021"
publish = false

[[bin]]
name = "o324"
path = "main.rs"

[dependencies]
o324-dbus = { path = "../dbus", features = ["proxy"] }
clap = { version = "4.4.11", features = ["derive"] }
eyre = "0.6.9"
tokio = { version = "1", features = ["full"] }
colored = "3.0"
chrono = "0.4.34"
serde_json = "1.0"
serde = "1.0"
color-eyre = "0.6.3"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "registry"] }
