[package]
name = "o324-cli"
version = "0.2.0"
edition = "2021"
publish = false

[[bin]]
name = "o324"
path = "main.rs"

[dependencies]
o324-dbus = { path = "../dbus", features = ["proxy"] }
clap = { version = "4.4.11", features = ["derive"] }
eyre = "0.6.9"
tokio = { version = "1", features = ["full"] }
log = { version = "0.4", features = ["std"] }
colored = "3.0"
chrono = "0.4.34"
serde_json = "1.0"
serde = "1.0"
color-eyre = "0.6.3"
palette = "0.7"
terminal_size = "0.4.3"
lazy_static = "1.5"
termios = "0.3"
regex = "1.11"
libc = "0.2"
rand = "0.9"
