[package]
name = "o324-core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "o324_core"
path = "lib.rs"

[dependencies]
o324-storage = { path = "../storage", features = ["full"] }
o324-config = { path = "../config" }
patronus = { path = "../patronus" }
serde = "1.0"
serde_derive = "1.0"
async-std = "1.12.0"
eyre = "0.6.9"
ulid = "1.1"
thiserror = "1.0.57"
tokio = { version = "1.34", features = ["full"] }
dashmap = "5.5.3"
rand = "0.8"
