[package]
name = "o324-daemon"
version = "0.2.0"
edition = "2021"
publish = false

[[bin]]
name = "o324-daemon"
path = "main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
x11rb = "0.13"
zbus = "3.14"
thiserror = "1.0"
log = "0.4"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
anyhow = "1.0"
env_logger = "0.10"
once_cell = "1.18"
nix = { version = "0.27", features = ["process", "user"] }
libc = "0.2"
