[package]
name = "o324-daemon"
version = "0.2.0"
edition = "2021"
publish = false

[[bin]]
name = "o324-daemon"
path = "main.rs"

[dependencies]
o324-dbus = { path = "../dbus" }
async-trait = "0.1"
bincode = { version = "2.0", features = ["serde"] }
derive_builder = "0.20.0"
derive_more = { version = "1.0.0-beta.6", features = ["deref", "deref_mut", "display"] }
eyre = "0.6"
futures-util = "0.3"
native_db = "0.8.2"
native_model = "0.4.20"
libc = "0.2"
log = "0.4"
nix = { version = "0.27", features = ["process", "user"] }
once_cell = "1.18"
patronus = { path = "../patronus" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.9"
x11rb = "0.13"
zbus = "5.9"
zvariant = { version = "5.6", features = ["option-as-array"] }
shellexpand = "2.1"
clap = { version = "4.4.11", features = ["derive"] }
directories-next = "2.0"
color-eyre = "0.6.3"
colored = "2.0"
rand = "0.8"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "registry"] }
chrono = "0.4.41"
ulid = "1.2.1"
dashmap = "6"
shared_memory = "0.12"
raw_sync = "0.1"
sysinfo = "0.37"
signal = "0.7.0"
comfy-table = "7.0"

[dev-dependencies]
tempfile = "3.10"
serde = { version = "1.0", features = ["derive"] }

