[package]
name = "o324-daemon"
version = "0.2.0"
edition = "2021"
publish = false

[[bin]]
name = "o324-daemon"
path = "main.rs"

[dependencies]
wrap-builder = { path = "../wrap-builder" }
window-tracker = { path = "../window-tracker" }
o324-dbus = { path = "../dbus" }
bincode = { version = "2.0", features = ["serde"] }
derive_more = { version = "2", features = ["deref", "display"] }
eyre = "0.6"
native_db = "0.8.2"
native_model = "0.4.20"
patronus = { path = "../patronus" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
zbus = "5.9"
zvariant = { version = "5.6", features = ["option-as-array"] }
shellexpand = "3.1"
clap = { version = "4.4.11", features = ["derive"] }
directories-next = "2.0"
color-eyre = "0.6.3"
colored = "3.0"
rand = "0.9"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "registry"] }
chrono = "0.4.41"
dashmap = "6"
shared_memory = "0.12"
raw_sync = "0.1"
sysinfo = "0.37"
signal = "0.7.0"
comfy-table = "7.0"
typed-builder = "0.21.2"
once_cell = "1.18"

[dev-dependencies]
tempfile = "3.10"
serde = { version = "1.0", features = ["derive"] }

