[package]
name = "git-document-db"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
name = "git_document_db"
path = "lib.rs"

[dependencies]
git-document-db-macros = { path = "./macros" }
serde = "1.0"
serde_derive = "1.0"
eyre = "0.6.9"
ulid = "1.1"
derive_more = { version = "1.0.0-beta.6", features = ["deref", "deref_mut"] }
libc = "0.2"
git2 = "^0.18"
lazy_static = "1.4"
signal-hook = "0.3"
shellexpand = "2.1"
chrono = "0.4"
tempfile = "3.10.0"
sugars = "3.0.1"
retry = "2.0.0"
lazy-regex = "3.1.0"
strum_macros = "0.26.1"
strum = "0.26.1"
Inflector = "0.11.4"
erased-serde = "0.4"
fs2 = "0.4.3"
file-guard = "0.2.0"
nix = { version = "0.28.0", features = ["process"] }
bincode = "1.3.3"
typed-builder = "0.18.1"
thiserror = "1.0.58"
dashmap = "5.5.3"
tokio = { version = "1.34", features = ["full"] }
tracing = "0.1.40"
rand = "0.8"

# Storage types
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Dependencies for specific target environments
[target.'cfg(target_os = "linux")'.dependencies]
shared_memory = "0.12.4"
