[package]
name = "o324-gui"
version = "0.2.0"
description = "GUI for the o324 time tracker"
edition = "2021"

#[[bin]]
#name = "o324-gui"
#path = "src-interface/main.rs"

[lib]
name = "gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]
path = "src-interface/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
