[package]
name = "o324-storage-core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "o324_storage_core"
path = "lib.rs"

[dependencies]
o324-config = { path = "../config" }
patronus = { path = "../patronus" }
serde = "1.0"
serde_derive = "1.0"
eyre = "0.6.9"
derive_more = { version = "1.0.0-beta.6", features = ["deref", "deref_mut"] }
