[package]
name = "o324-storage-git"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
name = "o324_storage_git"
path = "lib.rs"

[dependencies]
o324-storage-core = { path = "../storage-core" }
o324-config = { path = "../config" }
serde = "1.0"
serde_derive = "1.0"
eyre = "0.6.9"
ulid = "1.1"
derive_more = { version = "1.0.0-beta.6", features = ["deref", "deref_mut"] }
libc = "0.2"
git2 = "^0.18"
lazy_static = "1.4"
signal-hook = "0.3"
shellexpand = "2.1"
chrono = "0.4"
tempfile = "3.10.0"
sugars = "3.0.1"
retry = "2.0.0"
lazy-regex = "3.1.0"
shaku = "0.6.1"
strum_macros = "0.26.1"
strum = "0.26.1"
Inflector = "0.11.4"
erased-serde = "0.4"
fs2 = "0.4.3"
nix = { version = "0.28.0", features = ["process"] }
shared_memory = "0.12.4"
bincode = "1.3.3"

# Storage types
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

