[package]
name = "o324-storage"
version = "0.0.1"
edition = "2021"
publish = false

[features]
full = ["git"]
git = [
  "dep:git2",
  "dep:libc",
  "dep:lazy_static",
  "dep:signal-hook",
  "dep:shellexpand",
  "dep:chrono",
]

[lib]
name = "o324_storage"
path = "lib.rs"

[dependencies]
patronus = { path = "../patronus" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
eyre = "0.6.9"
ulid = "1.1"
derive_more = { version = "1.0.0-beta.6", features = ["deref", "deref_mut"] }
base32 = "0.4.0"

# Git only dependencies
libc = { version = "0.2", optional = true }
git2 = { version = "0.18", optional = true }
lazy_static = { version = "1.4", optional = true }
signal-hook = { version = "0.3", optional = true }
shellexpand = { version = "2.1", optional = true }
chrono = { version = "0.4", optional = true }
