[package]
name = "o324-storage"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
name = "o324_storage"
path = "lib.rs"

[features]
full = ["git"]
git = [ "dep:o324-storage-git" ]

[dependencies]
o324-storage-core = { path = "../storage-core" }
o324-config = { path = "../config" }
serde = "1.0"
serde_derive = "1.0"
eyre = "0.6.9"
toml = "0.8.8"
strum_macros = "0.26.1"
strum = "0.26.1"
Inflector = "0.11.4"

# Optional deps
o324-storage-git = { path = "../storage-git", optional = true }
