[package]
name = "window-tracker"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
name = "window_tracker"
path = "lib.rs"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
x11rb = "0.13"
zbus = "5.9"
zvariant = { version = "5.6", features = ["option-as-array"] }
tracing = "0.1.40"

# window tracker
nix = { version = "0.30", features = ["process", "user"] }
once_cell = "1.18"
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
serde = { version = "1.0", features = ["derive"] }


