[package]
name = "o324-gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "o324_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon", "tracing", "image-png"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
o324-core = { path = "../../core" }
o324-storage = { path = "../../storage" }
o324-dbus-interface = { path = "../../dbus-interface" }

clap = { version = "4.4.11", features = ["derive"] }
eyre = "0.6.9"
tokio = { version = "1.34", features = ["full"] }
colored = "2.0"
shellexpand = "2.1"
prettytable-rs = "0.10.0"
color-eyre = "0.6.3"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "registry"] }
directories-next = "2.0"
zbus = "4.1"
zvariant = { version = "4.0.2", features = ["gvariant"] }
crossbeam-channel = "0.5.12"
dashmap = "5.5.3"
tauri-plugin-store = "2.0.0-beta.6"
